--- a/index.html
+++ b/index.html
@@ -142,19 +142,20 @@
     <div id="main">
       <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
         class="MenuB">Menu </div></span> 
-        
+
     </div>
   </div>
+  <br>
   <div class="conteudo">
-    <h1 class="center"> Conteúdo</h1>
+    <h1 style="text-align: center;"><strong class="textosTitulo"><em> Conteúdo </em> </strong></h1>
     <br>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non aut amet beatae eos sapiente distinctio
+    <p class="margem">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non aut amet beatae eos sapiente distinctio
       praesentium, tempora aperiam minima consectetur, nam dignissimos atque? Reiciendis labore quis illum dignissimos,
       omnis impedit.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit officia veniam quasi commodi in, accusantium
+    <p class="margem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit officia veniam quasi commodi in, accusantium
       autem optio, cumque consectetur rem mollitia consequuntur excepturi, praesentium ut voluptatum nostrum.
       Blanditiis, itaque enim.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque praesentium rem corrupti autem, eos, tempora,
+    <p class="margem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque praesentium rem corrupti autem, eos, tempora,
       vel nesciunt similique iure provident sit iusto? Aliquam, consequatur recusandae maxime reprehenderit molestias
       earum est.</p>
   </div>
