--- a/Energia.html
+++ b/Energia.html
@@ -21,129 +21,131 @@
     <h1 class="h1cabeça"><strong class="cabeça"> Física Na Mente </strong></h1>
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-<h1 style="text-align: center;">Tópicos</h1>
-    <a href="Ondas.html"><button type="button" class="btn">
-        <strong>Ondas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+      <h1 style="text-align: center;">Tópicos</h1>
+      <a href="Ondas.html"><button type="button" class="btn">
+          <strong>Ondas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Leis De Newton.html">
-      <button type="button" class="btn">
-        <strong>Leis de Newton</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Leis De Newton.html">
+        <button type="button" class="btn">
+          <strong>Leis de Newton</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Mecanica.html">
-      <br><button type="button" class="btn">
-        <strong>Mecânica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Mecanica.html">
+        <br><button type="button" class="btn">
+          <strong>Mecânica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Energia.html">
-      <br><button type="button" class="btn">
-        <strong>Energia</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Energia.html">
+        <br><button type="button" class="btn">
+          <strong>Energia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="Eletricidade.html">
-      <br><button type="button" class="btn">
-        <strong>Eletricidade</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="Eletricidade.html">
+        <br><button type="button" class="btn">
+          <strong>Eletricidade</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="CorrentesEletricas.html">
-      <br><button type="button" class="btn">
-        <strong>Correntes Elétricas</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="CorrentesEletricas.html">
+        <br><button type="button" class="btn">
+          <strong>Correntes Elétricas</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <a href="TermoFisica.html">
-      <br><button type="button" class="btn">
-        <strong>Termofísica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <a href="TermoFisica.html">
+        <br><button type="button" class="btn">
+          <strong>Termofísica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br><a href="Optica.html"><button type="button" class="btn">
-        <strong>Óptica</strong>
-        <div id="container-stars">
-          <div id="stars"></div>
-        </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br><a href="Optica.html"><button type="button" class="btn">
+          <strong>Óptica</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-        <div id="glow">
-          <div class="circle"></div>
-          <div class="circle"></div>
-        </div>
-      </button></a>
-    <br>
-    <a href="Bibliografia.html"><button type="button" class="btn">
-      <strong>Bibliografia</strong>
-      <div id="container-stars">
-        <div id="stars"></div>
-      </div>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
+      <a href="Bibliografia.html"><button type="button" class="btn">
+          <strong>Bibliografia</strong>
+          <div id="container-stars">
+            <div id="stars"></div>
+          </div>
 
-      <div id="glow">
-        <div class="circle"></div>
-        <div class="circle"></div>
-      </div>
-    </button></a>
-  <br>
+          <div id="glow">
+            <div class="circle"></div>
+            <div class="circle"></div>
+          </div>
+        </button></a>
+      <br>
 
     </div>
-    
+
     <div id="main">
-      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div
-        class="MenuB">Menu </div></span> 
+      <span style="font-size:30px;cursor:pointer;" onclick="openNav()" class="openNav">&#9776;<div class="MenuB">Menu
+        </div></span>
 
     </div>
   </div>
   </div>
   <div class="conteudo">
-    <h1><strong class="textosTitulo"><em> Energia </em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Energia </em> </strong></h1>
+    </div>
     <br>
-    <p>
+    <p class="margem">
       A energia é uma palavra muito utilizada no nosso vocabulário, contudo muitas pessoas não compreendem seu
       verdadeiro significado, mais especificamente na física.(HELERBROCK, 2023).
       <br>
@@ -160,10 +162,12 @@
       força."
     </blockquote><br>
     </p>
-    <img src="Imagens/energia.webp" alt="Foto Satelite"><a href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
+    <div id="center">
+      <img src="Imagens/energia.webp" width="100%" alt="Foto Satelite"><a
+        href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
         Imagem Dísponivel
         Aqui</a> </legend>
-
+    </div>
     <br>
     <p class="margem"> A energia é um conceito bem complexo que envolve outro conceito, o trabalho.
       Existem na natureza cinco formas de energia: mecânica, térmica, elétrica, química e atômica.(HELERBROCK, 2023).
@@ -176,52 +180,61 @@
 
     </p>
     <br>
-    <p class="margem"> A energia cinética é a energia associada ao movimento de um objeto. Quanto maior a velocidade do objeto, maior a
+    <p class="margem"> A energia cinética é a energia associada ao movimento de um objeto. Quanto maior a velocidade do
+      objeto, maior a
       sua energia cinética.A fórmula para calcular a energia cinética é E = (1/2)mv², onde E é a energia cinética, m é a
       massa do objeto e v é a sua velocidade.(Melo, 2023).</p>
-    <p> A energia potencial é a energia associada à posição de um objeto levando em consideração um ponto de referência.
+    <p class="margem"> A energia potencial é a energia associada à posição de um objeto levando em consideração um ponto de referência.
       Um objeto colocado em uma posição mais alta em relação ao solo, por exemplo, possui mais energia potencial do que
       um objeto na mesma posição, mas mais próximo ao solo.(Melo, 2023).
     </p>
     <br>
-    <img src="Imagens/montanharussa.jpeg" alt="Foto Satelite" >
+    <img src="Imagens/montanharussa.jpeg" width="100%" alt="Foto Satelite">
     <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/montanha-russa-vermelha-1208055/">
         Imagem Dísponivel
         Aqui</a> </legend>
     <br>
-    <h1><strong class="textosTitulo"><em>Energia Térmica </em> </strong></h1>
-    <p class="margem">A energia térmica é a energia associada à temperatura de um objeto. Ela está associada ao movimento aleatório das
+    <div id="center">
+      <h1><strong class="textosTitulo"><em>Energia Térmica </em> </strong></h1>
+    </div>
+    <p class="margem">A energia térmica é a energia associada à temperatura de um objeto. Ela está associada ao
+      movimento aleatório das
       moléculas que formam um objeto e quanto maior a temperatura, maior é a agitação dessas moléculas e com isso maior
       é a energia térmica.(PRASS, 2023).
     </p>
-    <p class="margem">A temperatura ou esse “grau de agitação” pode ser transferido por condução, convecção ou radiação.(PRASS, 2023).
+    <p class="margem">A temperatura ou esse “grau de agitação” pode ser transferido por condução, convecção ou
+      radiação.(PRASS, 2023).
       Ex: quando temos uma xícara de chá em cima de uma mesa, o chá irá passar o calor para a mesa até que as duas
       estejam com a mesma temperatura.</p>
-    <p class="margem"> Isso acontece porque as moléculas tendem sempre a ficar em um estado estável e constante, com isso é passado
+    <p class="margem"> Isso acontece porque as moléculas tendem sempre a ficar em um estado estável e constante, com
+      isso é passado
       esse grau de agitação para todas as moléculas até que todas estejam na mesma frequência de agitação.(ANJOS, 2023)
     </p>
     <br>
-    <img src="Imagens/quente e frio  educador.webp" alt="Foto Satelite" >
-    <legend style="text-align: center;"><a href=" img src="Imagens/energia.webp" alt="Foto Satelite" width="600px"
-        style="margin-left: 110px;">
+    <img src="Imagens/quente e frio  educador.webp" width="100%" alt="Foto Satelite">
+    
         <legend style="text-align: center;"><a href="https://www.pexels.com/pt-br/foto/ilustracao-plasma-ball-414860/">
             Imagem Dísponivel
             Aqui</a> </legend>
       </a> </legend>
     <br>
-    <h1><strong class="textosTitulo"><em> Energia Elétrica </em> </strong></h1>
-    <p class="margem">A energia elétrica é uma forma de energia que resulta da movimentação de cargas elétricas, como elétrons, através
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Energia Elétrica </em> </strong></h1>
+    </div>
+    <p class="margem">A energia elétrica é uma forma de energia que resulta da movimentação de cargas elétricas, como
+      elétrons, através
       de um condutor. Essa energia é fundamental para o funcionamento de diversas tecnologias e equipamentos, desde
       lâmpadas e motores elétricos até celulares e computadores. (HELERBROCK, 2023).</p>
     <br>
     <img
       src="Imagens/png-transparent-incandescent-light-bulb-graphy-lighting-bulb-light-photography-innovation-business-removebg-preview.png"
-      alt="Foto Satelite" >
+      width="100%" alt="Foto Satelite">
     <legend style="text-align: center;"><a href="https://www.pngwing.com/pt/free-png-yeuqj">
         Imagem Dísponivel
         Aqui</a> </legend>
     <br>
-    <p class="margem">A unidade de medida da energia elétrica é o watt-hora (Wh), que indica a quantidade de energia consumida por um
+    <p class="margem">A unidade de medida da energia elétrica é o watt-hora (Wh), que indica a quantidade de energia
+      consumida por um
       dispositivo em uma hora de funcionamento. A energia elétrica é geralmente gerada em usinas de energia, que
       convertem outras formas de energia, como a energia mecânica ou térmica, em energia elétrica.(GOUVEIA, 2023).</p>
     <p class="margem">
@@ -229,7 +242,9 @@
       distribuição da energia para diferentes locais. A energia elétrica também pode ser armazenada em baterias e
       capacitores, para ser utilizada posteriormente.(HELERBROCK, 2023).</p>
     <br>
-    <h1><strong class="textosTitulo"><em>Energia Quimica</em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em>Energia Quimica</em> </strong></h1>
+    </div>
     <br>
     <p class="margem">
       A energia química é a energia armazenada nas ligações químicas entre os átomos de moléculas. Quando ocorre uma
@@ -237,39 +252,52 @@
       ou energia mecânica.(HELERBROCK, 2023).
 
     </p>
-    <p class="margem"> Os combustíveis, como gasolina, carvão e gás natural, são exemplos de fontes de energia química que são
+    <p class="margem"> Os combustíveis, como gasolina, carvão e gás natural, são exemplos de fontes de energia química
+      que são
       frequentemente utilizados na geração de energia. (HELERBROCK, 2023).
     </p>
-    <p class="margem">Quando um combustível é queimado, ocorre uma reação química que libera a energia química armazenada na molécula,
+    <p class="margem">Quando um combustível é queimado, ocorre uma reação química que libera a energia química
+      armazenada na molécula,
       que é transformada em calor e energia mecânica, por exemplo, para mover um carro ou gerar eletricidade em uma
       usina.(HELERBROCK, 2023).</p>
     <br>
-    <img src="Imagens/1618504738242.png" alt="Foto Satelite" >
+    <img src="Imagens/1618504738242.png" width="100%" alt="Foto Satelite">
     <legend style="text-align: center;"><a href="https://megawhat.energy/verbetes/320/energia-quimica">
         Imagem Dísponivel
         Aqui</a> </legend>
-    <h1><strong class="textosTitulo"><em> Energia Atomica </em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Energia Atomica </em> </strong></h1>
+    </div>
     <br>
-    <p class="margem">A energia atômica é a energia liberada a partir do núcleo de um átomo. Essa energia é liberada quando ocorre uma
+    <p class="margem">A energia atômica é a energia liberada a partir do núcleo de um átomo. Essa energia é liberada
+      quando ocorre uma
       reação nuclear, que pode ser de dois tipos: fissão ou fusão.(HELERBROCK, 2023).</p>
     <br>
-    <h1><strong class="textosTitulo"><em> Fissão Nuclear</em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em> Fissão Nuclear</em> </strong></h1>
+    </div>
     <br>
-    <p class="margem">Na fissão nuclear, um núcleo atômico pesado é dividido em dois núcleos menores, liberando uma grande quantidade
+    <p class="margem">Na fissão nuclear, um núcleo atômico pesado é dividido em dois núcleos menores, liberando uma
+      grande quantidade
       de energia. Essa energia pode ser usada para gerar eletricidade em usinas nucleares.(HELERBROCK, 2023).</p>
     <br>
-    <img src="Imagens/fissão-nuclear2-768x560.png" alt="Foto Satelite" >
+    <img src="Imagens/fissão-nuclear2-768x560.png" width="100%" alt="Foto Satelite">
     <legend style="text-align: center;"><a
         href="https://aprovatotal.com.br/fissao-e-fusao-nuclear-o-que-sao-diferencas-e-aplicacoes/">
         Imagem Dísponivel
         Aqui</a> </legend>
     <br>
-    <h1><strong class="textosTitulo"><em>Fusão Nuclear</em> </strong></h1>
+    <div id="center">
+      <h1><strong class="textosTitulo"><em>Fusão Nuclear</em> </strong></h1>
+    </div>
     <br>
-    <p class="margem"> 
-      A energia atômica é uma forma de energia não renovável, já que depende de fontes de urânio e outros elementos radioativos que são finitos na Terra. Além disso, o uso da energia nuclear tem implicações ambientais e de segurança significativas, como o risco de acidentes nucleares e a produção de resíduos radioativos que podem ser perigosos por centenas de milhares de anos. (HELERBROCK, 2023).   </p>
+    <p class="margem">
+      A energia atômica é uma forma de energia não renovável, já que depende de fontes de urânio e outros elementos
+      radioativos que são finitos na Terra. Além disso, o uso da energia nuclear tem implicações ambientais e de
+      segurança significativas, como o risco de acidentes nucleares e a produção de resíduos radioativos que podem ser
+      perigosos por centenas de milhares de anos. (HELERBROCK, 2023). </p>
     <br>
-    <img src="Imagens/57a1c0dfb60c3-fusao-nuclear.webp" alt="Foto Satelite" >
+    <img src="Imagens/57a1c0dfb60c3-fusao-nuclear.webp" width="100%" alt="Foto Satelite">
     <legend style="text-align: center;"><a href="https://www.todamateria.com.br/fusao-nuclear/">
         Imagem Dísponivel
         Aqui</a> </legend>
@@ -280,7 +308,7 @@
       segurança significativas, como o risco de acidentes nucleares e a produção de resíduos radioativos que podem ser
       perigosos por centenas de milhares de anos. (HELERBROCK, 2023). </p>
   </div>
- 
+
   <div class="rodape"></div>
 
 </body>
